...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            tools:ignore="HardcodedText" />

        <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
            android:id="@+id/vgsTilCardHolder"
            style="@style/VGSCollect.Widget.TextInputLayout.OutlineBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_material_micro"
            app:boxBackgroundColor="@color/fiord_20"
            app:boxStrokeColor="@color/invisible_input_border"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/mtvCardHolderHint">

            <com.verygoodsecurity.vgscollect.widget.PersonNameEditText
                android:id="@+id/vgsTiedCardHolder"
                style="@style/VGSCollect.Widget.TextInputEditText.OutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/card_holder_name_desc"
                android:importantForAccessibility="yes"
                app:fieldName="card.holderName"
...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/vgsTilCardHolder"
            tools:ignore="HardcodedText" />

        <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
            android:id="@+id/vgsTilCardNumber"
            style="@style/VGSCollect.Widget.TextInputLayout.OutlineBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_material_micro"
            app:boxBackgroundColor="@color/fiord_20"
            app:boxStrokeColor="@color/invisible_input_border"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/mtvCardNumberHint">

            <com.verygoodsecurity.vgscollect.widget.VGSCardNumberEditText
                android:id="@+id/vgsTiedCardNumber"
                style="@style/VGSCollect.Widget.TextInputEditText.OutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/card_number_desc"
                app:cardBrandIconGravity="end"
                app:fieldName="card.number"
...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/vgsTilCardNumber"
            tools:ignore="HardcodedText" />

        <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
            android:id="@+id/vgsTilExpiry"
            style="@style/VGSCollect.Widget.TextInputLayout.OutlineBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_material_micro"
            android:layout_marginEnd="@dimen/margin_padding_material_small"
            app:boxBackgroundColor="@color/fiord_20"
...
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@+id/guidelineHalf"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/mtvExpiryHint">

            <com.verygoodsecurity.vgscollect.widget.ExpirationDateEditText
                android:id="@+id/vgsTiedExpiry"
                style="@style/VGSCollect.Widget.TextInputEditText.OutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:datePattern="MM/yy"
                app:datePickerModes="input"
                app:fieldName="card.expiry"
...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/guidelineHalf"
            app:layout_constraintTop_toBottomOf="@+id/vgsTilCardNumber"
            tools:ignore="HardcodedText" />

        <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
            android:id="@+id/vgsTilCvc"
            style="@style/VGSCollect.Widget.TextInputLayout.OutlineBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_material_small"
            android:layout_marginTop="@dimen/margin_padding_material_micro"
            app:boxBackgroundColor="@color/fiord_20"
...
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@+id/guidelineHalf"
            app:layout_constraintTop_toBottomOf="@+id/mtvCvcHint">

            <com.verygoodsecurity.vgscollect.widget.CardVerificationCodeEditText
                android:id="@+id/vgsTiedCvc"
                style="@style/VGSCollect.Widget.TextInputEditText.OutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fieldName="card.cvc"
                app:imeOptions="actionNext" />
        </com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout>
...
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@+id/guidelineHalf"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/mtvCityHint">

            <com.verygoodsecurity.vgscollect.widget.VGSEditText
                android:id="@+id/vgsTiedCity"
                style="@style/VGSCollect.Widget.TextInputEditText.OutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fieldName="address.city"
                app:imeOptions="actionNext"
                app:isRequired="false" />
...
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@+id/guidelineHalf"
            app:layout_constraintTop_toBottomOf="@+id/mtvPostalCodeHint">

            <com.verygoodsecurity.vgscollect.widget.VGSEditText
                android:id="@+id/vgsTiedPostalCode"
                style="@style/VGSCollect.Widget.TextInputEditText.OutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fieldName="address.postalCode"
                app:imeOptions="actionNext"
                app:isRequired="false" />
...
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/attach_btn_title"
            app:icon="@drawable/baseline_insert_drive_file_24"
            app:iconGravity="end"
            app:layout_constraintBottom_toBottomOf="@+id/mbSubmit"
            app:layout_constraintEnd_toStartOf="@+id/mbSubmit"
            app:layout_constraintTop_toTopOf="@+id/mbSubmit" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbSubmit"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
...
