<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fitsSystemWindows="true"
        android:paddingBottom="@dimen/margin_padding_material_medium">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ccInputsRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:minHeight="0dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvCardNameHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_padding_material_medium"
                android:layout_marginTop="@dimen/margin_padding_material_medium"
                android:fontFamily="sans-serif-medium"
                android:text="Card Name"
                android:textAppearance="?attr/textAppearanceCaption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
                android:id="@+id/vgsTilCardNumber"
                style="@style/VGSCollect.Widget.TextInputLayout.OutlineBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_padding_material_medium"
                android:layout_marginTop="@dimen/margin_padding_material_micro"
                android:hint="Card"
                app:boxBackgroundColor="@color/fiord_20"
                app:boxStrokeColor="@color/invisible_input_border"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mtvCardNameHint">

                <com.verygoodsecurity.vgscollect.widget.VGSCardNumberEditText
                    android:id="@+id/vgsTiedDCardNumber"
                    style="@style/VGSCollect.Widget.TextInputEditText.OutlineBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nextFocusDown="@id/vgsTiedDateRange"
                    app:fieldName="card_number"
                    app:formatterMode="strict"
                    app:imeOptions="actionNext"
                    app:inputType="number" />
            </com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvDateRangeHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_padding_material_medium"
                android:layout_marginTop="@dimen/margin_padding_material_medium"
                android:fontFamily="sans-serif-medium"
                android:text="Date Range"
                android:textAppearance="?attr/textAppearanceCaption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vgsTilCardNumber"
                tools:ignore="HardcodedText" />

            <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
                android:id="@+id/vgsTilDateRange"
                style="@style/VGSCollect.Widget.TextInputLayout.OutlineBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_padding_material_medium"
                android:layout_marginTop="@dimen/margin_padding_material_micro"
                app:boxBackgroundColor="@color/fiord_20"
                app:boxStrokeColor="@color/invisible_input_border"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mtvDateRangeHint">

                <com.verygoodsecurity.vgscollect.widget.RangeDateEditText
                    android:id="@+id/vgsTiedDateRange"
                    style="@style/VGSCollect.Widget.TextInputEditText.OutlineBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:datePattern="MM/yy"
                    app:datePickerModes="spinner"
                    app:fieldName="date"
                    app:formatterMode="strict"
                    app:hint="Date range"
                    app:imeOptions="actionNext"
                    app:inputType="date"
                    app:maxDate="10/25"
                    app:minDate="02/25" />
            </com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbSubmit"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/margin_padding_material_medium"
                android:layout_marginTop="@dimen/margin_padding_material_medium"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="Submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vgsTilDateRange"
                tools:ignore="HardcodedText"
                tools:layout_editor_absoluteX="313dp"
                tools:layout_editor_absoluteY="346dp" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/mbGroupCodeExampleType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_material_medium"
                app:checkedButton="@+id/mbInputState"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mbSubmit"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mbInputState"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="States"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    tools:ignore="HardcodedText" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mbResponse"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Response"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    tools:ignore="HardcodedText" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_material_medium"
                app:cardBackgroundColor="@color/blackPearl"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mbGroupCodeExampleType">

                <include layout="@layout/code_example_layout" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvResponseCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/viewDisableTouch"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</FrameLayout>
